Bug 122800 - VIEWING The automatically break separates the words of the X axis labels
Summary: VIEWING The automatically break separates the words of the X axis labels
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0 target:6.2.1
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-18 08:36 UTC by NISZ LibreOffice Team
Modified: 2019-02-10 04:05 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the problem in Calc. (115.02 KB, image/png)
2019-01-18 08:37 UTC, NISZ LibreOffice Team
Details
Example file from Calc (22.36 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-01-18 08:37 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-01-18 08:36:49 UTC
Description:
The automatically break separates the words of the X axis labels.

Steps to Reproduce:
Steps to reproduce:
    1. Create a new spreadsheet in LibreOffice Calc.
    2. Insert a chart with long X axis labels.
    3. Double-click on the X axis labels.
    4. In the X Axis dialog box, on the Label tab, click Break.
    5. Press OK button.

Actual Results:
X axis labels are unreadable.

Expected Results:
The automatic break shouldn’t break the words into individual letters below each other in the X axis labels – it should keep the words intact as long as possible, then switch automatically to a 45 degree rotated view.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2019-01-18 08:37:22 UTC
Created attachment 148417 [details]
Screenshot of the problem in Calc.
Comment 2 NISZ LibreOffice Team 2019-01-18 08:37:52 UTC
Created attachment 148418 [details]
Example file from Calc
Comment 3 Commit Notification 2019-01-18 15:49:57 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/82913d296709ccf4d4f35d53835bcbf49286ba28%5E%21

tdf#122800 Chart view: Textbreak of X axis labels

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2019-01-21 18:23:58 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 3fa4674615b747e219afe5bf0a9b689df3840439
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: 


Also reproduced in

Version: 5.2.0.0.alpha0+
Build ID: 3ca42d8d51174010d5e8a32b96e9b4c0b3730a53
Threads 4; Ver: 4.15; Render: default;
Comment 5 Xisco Faulí 2019-01-21 18:24:56 UTC
@Gabor, should it be cherry-picked to 6-2 ?
Comment 6 Gabor Kelemen (Collabora) 2019-01-22 07:10:32 UTC
(In reply to Xisco Faulí from comment #5)
> @Gabor, should it be cherry-picked to 6-2 ?

I guess yes, it's kind of a significant change in behavior. Probably not small enough for a point release.
Comment 7 Commit Notification 2019-02-10 04:05:25 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/16b8cb5e1bce0098b253395030b3c8ae9f5ae39a%5E%21

tdf#122800 Chart view: Textbreak of X axis labels

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.