tdf#122800 Chart view: Textbreak of X axis labels

Do not break the word into individual letters below
each other in the X axis labels. Keep the default
45 degree (even if the textbreak is true) rotation
if there is no enough space for a single word between
two tickmark.

Change-Id: I6f11e55b7ee8373210c1c417e64d552a6cd89812
Reviewed-on: https://gerrit.libreoffice.org/66580
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>